assignment finally completed

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,9 @@
                     <option value="other borough">Other Borough</option>
                     <option value="out of state">Out Of State</option>
                 </select>
+                <input type="checkbox" id="did-like-assignment" name="didLikeAssignment">
+                <label for="did-like-assignment">Did you enjoy this assignment?</label>
+                <button>Submit</button>
             </fieldset>
         </form>
         <script src="index.js"></script>
